; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_parse.c_stream_is_top_num.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_parse.c_stream_is_top_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jv_parser = type { i64, i32 }

@JV_KIND_NUMBER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.jv_parser*)* @stream_is_top_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stream_is_top_num(%struct.jv_parser* %0) #0 {
  %2 = alloca %struct.jv_parser*, align 8
  store %struct.jv_parser* %0, %struct.jv_parser** %2, align 8
  %3 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %4 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.jv_parser*, %struct.jv_parser** %2, align 8
  %9 = getelementptr inbounds %struct.jv_parser, %struct.jv_parser* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = call i64 @jv_get_kind(i32 %10)
  %12 = load i64, i64* @JV_KIND_NUMBER, align 8
  %13 = icmp eq i64 %11, %12
  br label %14

14:                                               ; preds = %7, %1
  %15 = phi i1 [ false, %1 ], [ %13, %7 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @jv_get_kind(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
